i "Updated the css files and made the website much cooler"

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-color:#282e3c !important;
+    background-color:#242424 !important;
     display: flex;
     flex-direction: column;
 }
@@ -19,6 +19,10 @@ body{
     text-decoration: none;
 }
 
+.navbar a:hover{
+    color: white;
+}
+
 .link-box{
     display: flex;
     flex-direction: row;
@@ -30,8 +34,11 @@ body{
     align-items: baseline;
 }
 
+.navbar h1{
+    font-family: "Righteous", sans-serif !important;
+}
+
 h1{
-    font-family: "Righteous", sans-serif;
     font-weight: 400;
     font-style: normal;
     color: black !important;
@@ -40,44 +47,40 @@ h1{
 }
 
 .post-container h1{
-    background-color: #988829;
+    background-color: #706BC6;
 }
 
 .navbar{
-    background-color: #fdff00 !important;
-    /* box-shadow: 0px 10px 10px #988829; */
+    background-color: #37337B !important;
 
-}
-
-.post-container h5{
-    color: #fdff00 !important;
-    font-family: "Righteous", sans-serif;
-}
-
-.post-container h6{
-    color: #988829 !important;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .card-link{
-    background-color: #282e3c !important;
+    background-color: #706BC6 !important;
+    color: #242424 !important;
 }
 
 .card-link:hover{
-    background-color: white !important;
-    color: #242424;
+    background-color: #282e3c !important;
+    color: #E1E0EF !important;
 }
 
 .card-body{
-    background-color: #242424;
-    color: white !important;
+    background-color: #A6A4D6;
+    color: black !important;
     border-radius: 15px;
-    box-shadow: 0px 0px 20px 5px #242424;
+    box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.616), inset 0px 0px 40px 5px #37337B;
+    transition: all 1s;
+}
+
+.card-body:hover{
+    background-color: #4943c9;
 }
 
 .card{
     border: none !important;
-    background-color: #282e3c !important;
+    background-color: #242424 !important;
+    border-radius: 15px !important;
 }
 
 .blog-container{
@@ -90,17 +93,6 @@ h1{
 
 .blog-container::-webkit-scrollbar{
     display: none;
-}
-
-.blog-container p{
-    padding: 15px;
-    text-align: left;
-    color: white;
-}
-
-h3{
-    width: 100%;
-    text-align: center;
 }
 
 .articleTitle{
@@ -123,8 +115,31 @@ input[type=submit]:hover{
     color: white;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
 
+h1, h2, h3, h4, h5, p{
+    font-family: 'Poppins';
+    font-weight: 700 !important;
+}
 
+html {font-size: 100%;} /* 16px */
+
+h1 {font-size: 4.210rem; /* 67.36px */}
+
+h2 {font-size: 3.158rem; /* 50.56px */}
+
+h3 {font-size: 2.369rem; /* 37.92px */}
+
+h4 {font-size: 1.777rem; /* 28.48px */}
+
+h5 {font-size: 1.333rem; /* 21.28px */
+    color: #242424 !important;
+}
+
+small {font-size: 0.750rem; /* 12px */}
 
 
 
@@ -148,7 +163,7 @@ main{
 footer{
     position: absolute;
     bottom: 0;
-    background-color: #fdff00;
+    background-color: #37337B;
     width: 100%;
 }
 
