--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/" style="font-weight: bolder;">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" style="font-weight: bolder; color: rgb(108, 88, 195)">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/newblog">New blog</a>
@@ -57,4 +57,3 @@
       <% } %>
     </div>
   </div>
-<%- include("partials/footer.ejs") %>
