--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,12 +48,16 @@
             <h5 class="card-title"> <%= articleData[article]["title"] %> </h5>
             <h6 class="card-subtitle mb-2 text-body-secondary"> <%= articleData[article]["sub-title"] %> </h6>
             <p class="card-text"> <%= articleData[article]["sub-content"] %> </p>
-            <a href="yourBlog/<%= articleData[article]["id"] %>" class="card-link">Full blog</a>
-            <form action="/del/<%= articleData[article]["id"] %>" method="post">
-            <input type="submit" value="Delete" id="delete">
-            </form>
+            <div class="option-box">
+              <a href="yourBlog/<%= articleData[article]["id"] %>" class="card-link">Full blog</a>
+              <form action="/del/<%= articleData[article]["id"] %>" method="post">
+              <input type="submit" value="Delete" id="delete">
+              </form>
+              <button class="edit" onclick="location.href = '/editBlog/<%= articleData[article].id %>'"   >Edit</button>
+              </div>
           </div>
         </div>
       <% } %>
     </div>
   </div>
+<%- include("partials/footer.ejs") %>
