--- a/public/styles/newBlog.css
+++ b/public/styles/newBlog.css
@@ -10,12 +10,10 @@ body{
     flex-direction: column;
 }
 
-h1{
-    font-weight: 400;
-    font-style: normal;
-    color: black !important;
-    text-align: center;
-    font-size: 3em;
+@font-face{
+    font-family: 'After smile';
+    src: url("./AfterSmileRegular-K7M3y.otf");
+    font-weight: bold;
 }
 
 .navbar h1{
@@ -24,6 +22,12 @@ h1{
 
 .post-container h1{
     background-color: #706BC6;
+    font-weight: 400;
+    font-style: normal;
+    color: black !important;
+    text-align: center;
+    font-size: 3em;
+    font-family: 'After smile';
 }
 
 .navbar{
